--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   height: 100vh;
   width: 100vw;
   overflow: hidden;
+  position: absolute;
 }
 
 .centre {
@@ -69,4 +70,9 @@
 #location .btn input:hover{
   background: white;
   color: black
+}
+
+#location .error {
+  color: red;
+  margin-top: 5%;
 }
